[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto="fat"
overflow-checks = false
incremental = false
debug=0
strip = "symbols"
debug-assertions=false
panic = "abort"
codegen-units = 1

[dependencies]
rayon = "*"
rustc-hash = "*"
rand = "*"